fix: fix donut to be visible in sprint

--- a/rs-lang/src/app/pages/sprint/sprint.component.scss
+++ b/rs-lang/src/app/pages/sprint/sprint.component.scss
@@ -1,5 +1,6 @@
 .sprint {
-  max-width: 800px;
+  width: 800px;
+  height: 100vh;
   margin: 0 auto;
 }
 
@@ -7,4 +8,9 @@
   background-color: white;
   border: none;
   cursor: pointer;
+}
+
+.sprint-results {
+  max-width: 600px;
+  height: 60vh;
 }
