--- a/rs-lang/src/app/shared/components/game-results/game-results.component.scss
+++ b/rs-lang/src/app/shared/components/game-results/game-results.component.scss
@@ -1,4 +1,4 @@
-.mat-tab-group {
-  margin-bottom: 48px;
-  width: 600px;
+.donut {
+  display: flex;
+  justify-content: center;
 }
